petshelter-frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {

  width: 40%;
  pointer-events: none;
}

.App-header {
  background: rgba(242,246,248,1);
  background: -moz-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(242,246,248,1)), color-stop(42%, rgba(224,239,249,1)), color-stop(49%, rgba(222,235,244,1)), color-stop(68%, rgba(216,225,231,1)), color-stop(100%, rgba(181,198,208,1)));
  background: -webkit-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
  background: -o-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
  background: -ms-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
  background: linear-gradient(to right, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#b5c6d0', GradientType=1 );
  min-height: 90vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}
.nav-link{
  color:white
}
.a2:hover{
  color:white!important;
  text-shadow: 2px 2px gray;
}

span{
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: row;
  color: white;
}

